--- a/nlp.html
+++ b/nlp.html
@@ -115,7 +115,7 @@
 <p><span class="badge badge-light">Prague</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/clearridgedefense/job/p3qxj89gk1tx8zcsxphephgioa'>Artificial Intelligence / Natural Language Processing Software ...</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/clearridgedefense/job/p3qxj89gk1tx8zcsxphephgioa'>Artificial Intelligence / Natural Language Processing Software ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 7, 2019 ... The Software Engineer will use machine learning to generate simulated content 
 on various websites and social media platforms that will then be used for?...</p>
@@ -153,7 +153,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1905351'>Job Application for Research Scientist (NLP, IR, Complex Networks, Recommender Systems) at Dataminr</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1905351'>Job Application for Research Scientist (NLP, IR, Complex Networks, Recommender Systems) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -163,7 +163,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/a07eb43a-9513-4100-8d3c-fae448f16b15'>HomeX - NLP Research Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/homex/a07eb43a-9513-4100-8d3c-fae448f16b15'>HomeX - NLP Research Engineer</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -191,7 +191,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-09-29</p>
 <hr/>
-<h5><a href='https://snap.hr/babylon-health/job/nlp-software-engineer/02ebe764cf46613e74f7555d3310dbb5/'>NLP Software Engineer at Babylon Health</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/babylon-health/job/nlp-software-engineer/02ebe764cf46613e74f7555d3310dbb5/'>NLP Software Engineer at Babylon Health</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-09-28</p>
 <hr/>
@@ -264,7 +264,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/swiggy/787fb155-01ca-40b1-b049-e03fb394143e'>Swiggy - Senior Data Scientist- NLP</a></h5> 
+<h5><a href='https://jobs.lever.co/swiggy/787fb155-01ca-40b1-b049-e03fb394143e'>Swiggy - Senior Data Scientist- NLP</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -282,7 +282,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-09-11</p>
 <hr/>
-<h5><a href='https://idana.join.com/jobs/353599-research-software-engineer-ml-und-nlp-in-ehealth-w-m-d'>Research Software Engineer - ML & NLP in eHealth</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idana.join.com/jobs/353599-research-software-engineer-ml-und-nlp-in-ehealth-w-m-d'>Research Software Engineer - ML & NLP in eHealth</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 21 Stunden ... Tomes GmbH has a job opening for Research Software Engineer - ML & NLP in 
 eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?...</p>
@@ -297,7 +297,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/cardinalhire/136e4a29-f597-40eb-b7eb-18b884392a09'>Stealth Startup - Natural Language Processing Engineer - up to $190,000</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cardinalhire/136e4a29-f597-40eb-b7eb-18b884392a09'>Stealth Startup - Natural Language Processing Engineer - up to $190,000</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -338,7 +338,7 @@ que?...</p>
 <p>Aug 26, 2019 ... Hands-on working experience in deep NLP Learning algorithms experiences in 
 unstructured text data analysis across industries. Added advantage would be?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/instabase/jobs/4201269002'>Job Application for Software Engineer - Natural Language Processing (NLP) at Instabase</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/instabase/jobs/4201269002'>Job Application for Software Engineer - Natural Language Processing (NLP) at Instabase</a></h5> 
 <p><span class="badge badge-light">San Francisco, CANew York, NYBoston, MA</span></p>
 <p>Posted on: 2019-09-01</p>
 <hr/>
@@ -373,7 +373,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p>Aug 15, 2019 ... Data Scientist NLP (Entale). London, United Kingdom. Accelerator ? Engineering
 . Full-time. Apply for this job. We are looking for a talented Data Scientist to?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lendeavor/e0696d76-180f-4994-a4ad-0376274d235a'>Lendeavor - Senior Software Engineer, Computer Vision and NLP</a></h5> 
+<h5><a href='https://jobs.lever.co/lendeavor/e0696d76-180f-4994-a4ad-0376274d235a'>Lendeavor - Senior Software Engineer, Computer Vision and NLP</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-21</p>
 <hr/>
@@ -472,7 +472,7 @@ India.</p>
 <p><span class="badge badge-light">Z?rich, Zurich, Switzerland</span></p>
 <p>Posted on: 2019-08-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://10clouds.workable.com/jobs/1084159'>Jobs: Python Developer (NLP & Data Science) - Apply ... - 10Clouds</a></h5> 
+<h5><a href='https://10clouds.workable.com/jobs/1084159'>Jobs: Python Developer (NLP & Data Science) - Apply ... - 10Clouds</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 22, 2019 ... Apply online for the job of Python Developer (NLP & Data Science) at 10Clouds.</p>
 <hr/>
